# MoonDeck

./: .gitignore  MoonDeck.v0.4.spec  PROJECT_PLAN.md  README.md  build.py  main.py  pyproject.toml  requirements.txt
cards/: __init__.py
cards/calendar_card/: __init__.py  dis_widget.pyc.py  dump_widget.pyc.py  events.py  lunar.py  mimo_service.py  month_view.py  music_area.py  rebuild_widget.py  widget.py  widget_dis.txt  widget_dump.json  widget_v06.py
cards/music_card/: __init__.py  audio_viz.py  audio_viz.v0.2.py  cover_fetcher.py  lyrics_loader.py  lyrics_loader.v0.2.py  media_ctrl.py  now_playing.py  service.py  service.v0.2.py  widget.py  widget.v0.2.py
cards/token_card/: __init__.py  service.py
cards/weather_card/: __init__.py  service.py
config/: default.yaml  hotkeys.yaml  theme.yaml
core/: __init__.py  canvas.py  card_base.py  click_manager.py  desktop_bg.py  desktop_pet.py  drag_manager.py  event_bus.py  hotkey_manager.py  layout_manager.py  pet_dialogue.py  storage.py  theme.py  tray.py
docs/: mockup_silvermoon.html
hooks/: hook-cards.music_card.now_playing.py
tests/: __init__.py  test_music_card.py  test_music_widget.py
tests/integration/: __init__.py  test_calendar_card_startup.py  test_full_launch.py  test_interaction_layer.py
tests/unit/: __init__.py  _fake_card.py  _test_helpers.py  conftest.py  test_calendar_lunar.py  test_canvas.py  test_card_base.py  test_click_manager.py  test_dispatcher_mode_regression.py  test_drag_manager.py  test_drag_resize_snap.py  test_event_bus.py  test_hotkey_manager.py  test_layout_manager.py  (+2 more)
tools/: demo_screenshot.ps1  dev_launcher.ps1  gen_icon.py  screenshot_canvas.py
