[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moondeck"
version = "0.1.0"
description = "MoonDeck 月坞 - Windows 桌面浮窗卡片系统"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "老大", email = "mao.xiaojun@qq.com" },
    { name = "银月", email = "yinyue@moondeck.local" },
]
keywords = ["desktop", "widget", "floating", "canvas", "pyqt6", "moondeck"]

dependencies = [
    "PyQt6>=6.6.0",
    "PyYAML>=6.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "APScheduler>=3.10.4",
    "watchdog>=4.0.0",
    "anthropic>=0.39.0",
    "pillow>=10.0.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-qt>=4.4.0",
    "black>=23.10.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
moondeck = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "cards*", "services*", "storage*", "ui*", "pet*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
